# owmlib

./: LICENSE  README.md  core.py  demo.py  pyproject.toml  requirements.txt  test_collate.py  weather.py
owmforecast/: core.py  util.py  weather.py
owmlib/: __init__.py  core.py
tests/: test_collate.py  test_weather.py
