[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "owmlib"
version = "0.1.0"
description = "A thin Python client library for OpenWeatherMap APIs"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Hassan El anabi" }
]

dependencies = [
    "requests"
]

[project.urls]
Homepage = "https://github.com/helanabi/owmlib"
